[package]
name = "multi-readers"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Combining multiple readers"
keywords = ["readers", "multiple", "async", "seek"]
repository = "https://github.com/cradiy/multi-readers.git"
[dependencies]

tokio = { version = "1.41.0", optional = true }
# tokio = { version = "1.41.0", features = ["full"] }

[features]
async = ["tokio"]
