[package]
name = "multi-readers"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Combining multiple readers"
keywords = ["readers", "multiple", "async", "seek"]
repository = "https://github.com/cradiy/multi-readers.git"
[dependencies]

# tokio = { version = "1.43.0", features = ["full"] }
tokio = { version = "1.43.0", optional = true }
[features]
async = ["tokio"]
